Added Bearer token
